--- a/scss/blocks/_all-blocks.scss
+++ b/scss/blocks/_all-blocks.scss
@@ -4,4 +4,8 @@
 @import 'sitenav';
 @import 'main';
 @import 'hero';
+@import 'latest';
+@import 'host';
+@import 'topics';
+@import 'touch';
 @import 'footer';
